<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginEnd="-60dp"
        android:layout_marginRight="-60dp"
        android:background="@drawable/ic_path_18" />

    <TextView
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/size20"
        android:background="@drawable/round_border_dark_gray_bg"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/skip"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:text="Welcome Back"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_welcome_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcome"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="Login to enjoy all the cool Shisheo features"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size20"
        android:padding="@dimen/size2"
        android:src="@drawable/ic_left_arrow"
        android:tint="@color/primaryDark"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcome_sub">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_welcome_sub"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/size30"
            android:layout_marginEnd="@dimen/size30"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/updated_approved_logo_with_name_shisheo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_border_blue"
                android:padding="15dp">

                <!--<com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailhint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:hintEnabled="false"
                    android:textColorHint="@color/primaryDark">-->

                <EditText
                    android:id="@+id/ed_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:maxLength="65"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/primaryDark" />

                <!--            </com.google.android.material.textfield.TextInputLayout>-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_border_blue"
                android:padding="15dp">

                <!--<com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passhint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:hintEnabled="false"
                    android:textColorHint="@color/primaryDark">-->

                <EditText
                    android:id="@+id/ed_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_privacy"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/primaryDark" />

                <!--            </com.google.android.material.textfield.TextInputLayout>-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/forgot_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size4"
                    android:layout_marginBottom="@dimen/size6"
                    android:layout_weight="1"
                    android:padding="@dimen/size4"
                    android:text="@string/forgot_password"
                    android:textColor="@color/primaryDark" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/moveToSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size4"
                    android:layout_marginBottom="@dimen/size6"
                    android:layout_weight="1"
                    android:padding="@dimen/size4"
                    android:text="@string/create_account"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primaryDark" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                style="@style/button_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size10"
                android:layout_marginBottom="@dimen/size10"
                android:text="@string/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="5">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="#c0c0c0" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/orText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/or_login_with"
                    android:textAlignment="center" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="#c0c0c0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size20"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llfacebookLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/round_border_blue"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="0.5"
                        android:padding="22dp"
                        android:src="@drawable/ic_facebook" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/c_facebook"
                        android:textAlignment="center"
                        android:textColor="@color/primaryDark" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llgoogleLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_border_blue"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="0.5"
                        android:padding="22dp"
                        android:src="@drawable/ic_google" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/c_google"
                        android:textAlignment="center"
                        android:textColor="@color/primaryDark" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>